--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extend layout
 
 block content
   h1 moxboxx
+  a(href='/recent', id='intro-link') View the Latest Playlists!
   p.boombox
     img(src='/images/boombox.gif')
   p.tip Share playlists
