added share buttons

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -493,6 +493,12 @@ time {
     width: 100%;
 }
 
+#share {
+    clear: both;
+    float: left;
+    margin: 15px 0;
+}
+
 #playlist-title {
     overflow: hidden;
     text-overflow: ellipsis;
