--- a/views/playlist.jade
+++ b/views/playlist.jade
@@ -23,6 +23,10 @@ block content
         img(src='#{playlist.owner.gravatar}')
       time= playlist.created
 
+      #share
+        span(class='st_facebook_large', displayText='Facebook')
+        span(class='st_twitter_large', displayText='Tweet')
+
       if session.email
         .item-actions
           if isOwner
@@ -53,4 +57,10 @@ block footer
   if moxes.length > 0
     a(href='javascript:;', id='play-playlist', title='Start playlist') play
     a(href='javascript:;', id='repeat-playlist', title='Repeat playlist') repeat
+
+  script(type='text/javascript')
+    var switchTo5x = true;
+  script(type='text/javascript', src='http://w.sharethis.com/button/buttons.js')
+  script(type='text/javascript')
+    stLight.options({ publisher: 'b37445ca-94cf-40b2-8953-31ff49293916' });
 
