--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,36 +1,8 @@
-mixin playlist(playlists)
-  ol#playlists
-    for playlist in playlists
-      li(data-id='#{playlist.id}', data-action='/playlist/', class='item')
-        a(href='/user/#{playlist.owner.id}')
-          img(src='#{playlist.owner.gravatar}', title="#{playlist.owner.username}")
-        h2
-          a(href='/playlist/#{playlist.id}', title='#{playlist.title}', class='playlist-title')
-            = playlist.title
-            span.count #{playlist.moxCount || 0}
-          p.description= playlist.description
-        time= playlist.created
-
-        if session.email
-          .item-actions
-            if parseInt(session.userId, 10) === parseInt(playlist.owner.id, 10)
-              a(href='javascript:;', class='playlist-delete', data-context='playlist-delete') delete
-            if playlist.isStarred
-              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star on', data-action='/playlist/star/', data-context='playlist-star') unstar
-            else
-              a(href='javascript:;', data-id='#{playlist.id}', class='playlist-star', data-action='/playlist/star/', data-context='playlist-star') star
-   #pagination
-    if (currentPage > 0)
-      a#previous(href='?page=#{pagePrev}') Previous
-    if (playlists.length > 19)
-      a#next(href='?page=#{pageNext}') Older
-
 !!! 5
 html
   head
     title
       = 'moxboxx'
-      block title
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
@@ -48,8 +20,10 @@ html
   body(style='background-image: url(#{background});', class='page-#{pageType}')
     #flash
     header
-      a(href='/', id='logo', title='Home') moxboxx
-
+      if session.email
+        a(href='/#/dashboard', id='logo', title='Home') moxboxx
+      else
+        a(href='/', id='logo', title='Home') moxboxx
       ul.actions
         if session.email
           if session.username
@@ -79,14 +53,16 @@ html
       .wrapper
         block content
     #footer
-      block footer
+      #footer-inner
+        a(href='javascript:;', id='play-playlist', title='Start playlist') play
+        a(href='javascript:;', id='repeat-playlist', title='Repeat playlist') repeat
+
+        script(type='text/javascript')
+          var switchTo5x = true;
+        script(type='text/javascript', src='http://w.sharethis.com/button/buttons.js')
+        script(type='text/javascript')
+          stLight.options({ publisher: 'b37445ca-94cf-40b2-8953-31ff49293916' });
       a(href='http://noodleindustries.com', target='_blank', id="noodle-logo") Noodle Industries
 
     script(src='https://login.persona.org/include.js', type='text/javascript')
-    script(src='http://www.youtube.com/player_api')
-    script(src='/javascripts/froogaloop.js')
-    script(src='/javascripts/sc.js')
-    script(type='text/javascript')
-      var videoList = [];
-      var currentPlay;
     script(src='/javascripts/require.js', data-main='/javascripts/main')
