--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,16 +31,15 @@ html
               a(href='javascript:;') Playlists
               ul
                 li
-                  a(href='/user/#{session.userId}') View Playlists
-                li
                   a(href='/playlist/new') Create Playlist
                 li
                   a(href='/playlists/starred') View Starred
           li
             a(href='javascript:;') You
             ul
-              li
-                a(href='/user/#{session.userId}') View Profile
+              if session.username
+                li
+                  a(href='/user/#{session.userId}') View Profile
               li
                 a(href='/profile') Settings
               li
