load local youtube file

--- a/views/_playlist.jade
+++ b/views/_playlist.jade
@@ -47,7 +47,7 @@ ul#playlist-tags
           .item-actions
             a(href='javascript:;', class='mox-delete', data-context='mox-delete') delete
 
-script(src='http://www.youtube.com/player_api')
+script(src='/javascripts/youtube.js')
 script(src='/javascripts/froogaloop.js')
 script(src='/javascripts/sc.js')
 script(type='text/javascript')
