--- a/views/edit.jade
+++ b/views/edit.jade
@@ -13,7 +13,7 @@ block content
       a(href='javascript:;', class='playlist-edit-cancel off', data-context='playlist-edit-cancel') Cancel
       a(href='javascript:;', class='playlist-edit-save off', data-context='playlist-edit-save') Save
       button(type='submit') Update
-    a(href='javascript:;', class='playlist-edit', data-context='playlist-edit') edit
+    a(href='javascript:;', class='playlist-edit', data-context='playlist-edit') edit title / description
     a(href='/playlist/#{playlist.id}', class='playlist-edit') view public
 
   ul#playlist-tags
