adding fb metadata

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,13 @@ html
     title
       = 'moxboxx'
     meta(content='chrome=1', http-equiv='X-UA-Compatible')
+
+    meta(property='og:title', id='meta-title', content='')
+    meta(property='og:type', content='website')
+    meta(property='og:url', id='meta-url', content='')
+    meta(property='og:site_name', content='Moxboxx')
+    meta(property='og:description', id='meta-description', content='')
+
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='icon', type='image/gif', href='/favicon.gif')
