fixed like button

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -521,6 +521,7 @@ time {
 #share .twitter-share-button, #share .fb-like {
     display: block;
     float: left;
+    z-index: 5;
 }
 
 #playlist-title {
