--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,13 +28,24 @@ html(xmlns:fb='http://ogp.me/ns/fb')
   body(style='background-image: url(#{background});', class='page-#{pageType}')
     #fb-root
     script
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = '//connect.facebook.net/en_US/all.js#xfbml=1&appId=122592771235803';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
+      window.fbAsyncInit = function() {
+        // init the FB JS SDK
+        FB.init({
+          appId      : '122592771235803',
+          channelUrl : '//dev.moxboxx.com/channel', // Channel File for x-domain communication
+          status     : true,
+          cookie     : true,
+          xfbml      : true
+        });
+      };
+
+      (function(d, debug){
+         var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement('script'); js.id = id; js.async = true;
+         js.src = "//connect.facebook.net/en_US/all" + (debug ? "/debug" : "") + ".js";
+         ref.parentNode.insertBefore(js, ref);
+       }(document, /*debug*/ false));
     #flash
     header
       if session.email
