fixup login after authentication

--- a/views/channel.jade
+++ b/views/channel.jade
@@ -1,1 +1,6 @@
-script(src='//connect.facebook.net/en_US/all.js'_
+!!! 5
+html
+  head
+    title moxboxx
+  body
+    script(src='//connect.facebook.net/en_US/all.js')
