change to live domain

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,7 @@ html(xmlns:fb='http://ogp.me/ns/fb')
         // init the FB JS SDK
         FB.init({
           appId: '122592771235803',
-          channelUrl: '//dev.moxboxx.com/channel', // Channel File for x-domain communication
+          channelUrl: '//moxboxx.com/channel', // Channel File for x-domain communication
           status: true,
           cookie: true,
           xfbml: true
