--- a/views/layout.jade
+++ b/views/layout.jade
@@ -82,7 +82,7 @@ html(xmlns:fb='http://ogp.me/ns/fb')
         block content
     #footer
       #footer-inner
-        a(href='javascript:;', id='play-playlist', title='Start playlist') play
+        a(href='javascript:;', id='play-playlist', title='Start playlist or skip track') play
         a(href='javascript:;', id='repeat-playlist', title='Repeat playlist') repeat
 
       a(href='http://noodleindustries.com', target='_blank', id="noodle-logo") Noodle Industries
