--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,16 +14,8 @@ html(xmlns:fb='http://ogp.me/ns/fb')
     link(rel='shortcut icon', href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='icon', type='image/gif', href='/favicon.gif')
-    script(type='text/javascript')
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-4319539-42']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    if analytics
+      != '<script type="text/javascript">var _gaq = _gaq || []; _gaq.push(["_setAccount", "' + analytics + '"]); _gaq.push(["_trackPageview"]); (function() { var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true; ga.src = "http://www.google-analytics.com/ga.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ga, s); })();</script>'
 
   body(style='background-image: url(#{background});', class='page-#{pageType}')
     #fb-root
@@ -31,7 +23,7 @@ html(xmlns:fb='http://ogp.me/ns/fb')
       window.fbAsyncInit = function() {
         // init the FB JS SDK
         FB.init({
-          appId: '122592771235803',
+          appId: '#{facebookAppId}',
           channelUrl: '//moxboxx.com/channel', // Channel File for x-domain communication
           status: true,
           cookie: true,
