--- a/views/bookmarklet.jade
+++ b/views/bookmarklet.jade
@@ -4,7 +4,7 @@ block content
   section
     h1 Add to your playlist
     form(method='post', action='/mini/mox/')
-      input(type='text', name='url', id='mox-url')
+      input(type='text', name='url', id='mox-url', value='')
       select(name='playlist_id')
         for playlist in playlists
           option(value='#{playlist.id}')= playlist.title
