close bookmarklet after use

--- a/views/bookmarklet.jade
+++ b/views/bookmarklet.jade
@@ -1,7 +1,7 @@
 extend minimal
 
 block content
-  section
+  section.bookmarklet-wrapper
     h1 Add to your playlist
     form(method='post', action='/mini/mox/')
       input(type='text', name='url', id='mox-url')
