--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(xmlns:fb='http://ogp.me/ns/fb')
+html
   head
     title
       = 'moxboxx'
@@ -18,26 +18,6 @@ html(xmlns:fb='http://ogp.me/ns/fb')
       != '<script type="text/javascript">var _gaq = _gaq || []; _gaq.push(["_setAccount", "' + analytics + '"]); _gaq.push(["_trackPageview"]); (function() { var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true; ga.src = "http://www.google-analytics.com/ga.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ga, s); })();</script>'
 
   body(style='background-image: url(#{background});', class='page-#{pageType}')
-    #fb-root
-    script
-      window.fbAsyncInit = function() {
-        // init the FB JS SDK
-        FB.init({
-          appId: '#{facebookAppId}',
-          channelUrl: '//moxboxx.com/channel', // Channel File for x-domain communication
-          status: true,
-          cookie: true,
-          xfbml: true
-        });
-      };
-
-      (function(d, debug){
-         var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement('script'); js.id = id; js.async = true;
-         js.src = "//connect.facebook.net/en_US/all" + (debug ? "/debug" : "") + ".js";
-         ref.parentNode.insertBefore(js, ref);
-       }(document, /*debug*/ false));
     #flash
     header
       if session.email
@@ -66,8 +46,7 @@ html(xmlns:fb='http://ogp.me/ns/fb')
                 a(href='#', id='logout') Sign out
         else
           li
-            a(href='#', id='facebook-login') Sign in with Facebook
-            a(href='#', id='login') Sign in with Persona
+            a(href='/signin') Sign in with Twitter
 
     .main-wrapper
       .wrapper
@@ -77,7 +56,4 @@ html(xmlns:fb='http://ogp.me/ns/fb')
         a(href='javascript:;', id='play-playlist', title='Start playlist or skip track') play
         a(href='javascript:;', id='repeat-playlist', title='Repeat playlist') repeat
 
-      a(href='http://noodleindustries.com', target='_blank', id="noodle-logo") Noodle Industries
-
-    script(src='https://login.persona.org/include.js', type='text/javascript')
     script(src='/javascripts/require.js', data-main='/javascripts/main')
