--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,7 +46,7 @@ html
                 a(href='#', id='logout') Sign out
         else
           li
-            a(href='/signin') Sign in with Twitter
+            a(href='/auth/twitter') Sign in with Twitter
 
     .main-wrapper
       .wrapper
