i think i fixed all the broken things

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,7 +42,7 @@ html
               li
                 a(href='/profile') Settings
               li
-                a(href='#', id='logout') Sign out
+                a(href='/logout') Sign out
         else
           li
             a(href='/auth/twitter') Sign in with Twitter
