--- a/views/_playlists_user.jade
+++ b/views/_playlists_user.jade
@@ -1,4 +1,4 @@
-img(src='#{owner.gravatar}', id="gravatar-profile-large")
+img(src='#{owner.avatar}', id="gravatar-profile-large")
 if isOwner
   h1 Your Playlists
 else
