--- a/views/_playlist.jade
+++ b/views/_playlist.jade
@@ -14,7 +14,7 @@ ul#playlist-tags
   .playlist-item
     h3= 'Created by ' + playlist.owner.username
     a(href='/#/user/#{playlist.owner.id}')
-      img(src='#{playlist.owner.gravatar}')
+      img(src='#{playlist.owner.avatar}')
     time= playlist.created
 
     #share
@@ -42,7 +42,7 @@ ul#playlist-tags
           for user in playlist.starredBy
             li
               a(href='/#/user/#{user.id}', title="#{user.username}")
-                img(src='#{user.gravatar}')
+                img(src='#{user.avatar}')
 
   ol#moxlist
     for mox in moxes
