--- a/views/profile.jade
+++ b/views/profile.jade
@@ -6,9 +6,9 @@ block title
 block content
   h1 Edit your profile
 
-  if gravatar
+  if avatar
     #gravatar-wrapper
-      img(src='#{gravatar}', id="gravatar-profile")
+      img(src='#{avatar}', id="gravatar-profile")
 
   form(method='post', action='/profile', id='profile-edit')
     label(for='username', class='tip') Username*
